refactor(eurec4a1d): add draft for new distributions using radii bin width

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,12 +21,12 @@ repos:
     -   id: conventional-pre-commit
         stages: [commit-msg]
         args: []
--   repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.4 # Ruff version.
-    hooks:
-      - id: ruff # Run the linter for Python.
-        args: ["--ignore=E402"]  # Ignore E402 error "Module level import not at top of file"
-      - id: ruff-format # Run the formatter for Python.
+# -   repo: https://github.com/astral-sh/ruff-pre-commit
+#     rev: v0.1.4 # Ruff version.
+#     hooks:
+#       - id: ruff # Run the linter for Python.
+#         args: ["--ignore=E402"]  # Ignore E402 error "Module level import not at top of file"
+#       - id: ruff-format # Run the formatter for Python.
 
 #   # Use black to clean code in python and jupyter notebook cells
 # -   repo: https://github.com/psf/black
