fix(docs): set versions for sphinx and breath in ci_enviroment.yaml

--- a/ci_environment.yaml
+++ b/ci_environment.yaml
@@ -7,8 +7,8 @@ dependencies:
     - numpy
     - awkward >= 2.5.0
     - furo
-    - breathe
-    - sphinx
+    - sphinx >= 7.0.0
+    - breathe = 4.35.0
     - conda-forge::doxygen>=1.10.0
     - pip:
       - sphinx_copybutton
