--- a/examples/eurec4a1d/CMakeLists.txt
+++ b/examples/eurec4a1d/CMakeLists.txt
@@ -4,9 +4,9 @@ if(NOT DEFINED CMAKE_MINIMUM_REQUIRED_VERSION)
 endif()
 
 # subdirectories for specific examples of CLEO
-add_subdirectory(stationary_collision_condensation/src EXCLUDE_FROM_ALL)
+# add_subdirectory(stationary_null_microphysics/src EXCLUDE_FROM_ALL)
 add_subdirectory(stationary_condensation/src EXCLUDE_FROM_ALL)
-add_subdirectory(stationary_null_microphysics/src EXCLUDE_FROM_ALL)
-add_subdirectory(stationary_coalbure_condensation_small/src EXCLUDE_FROM_ALL)
-add_subdirectory(stationary_coalbure_condensation_large/src EXCLUDE_FROM_ALL)
-add_subdirectory(stationary_coalbure_condensation_cke/src EXCLUDE_FROM_ALL)
+# add_subdirectory(stationary_collision_condensation/src EXCLUDE_FROM_ALL)
+# add_subdirectory(stationary_coalbure_condensation_small/src EXCLUDE_FROM_ALL)
+# add_subdirectory(stationary_coalbure_condensation_large/src EXCLUDE_FROM_ALL)
+# add_subdirectory(stationary_coalbure_condensation_cke/src EXCLUDE_FROM_ALL)
