fix(eurec4a1d-compile): update build.yml to use correct eurec4a1d executable names
Use the executable names 
eurec4a1d_null_microphysics eurec4a1d_condensation eurec4a1d_collision_condensation eurec4a1d_coalbure_condensation_small eurec4a1d_coalbure_condensation_large

for all eurec4a1d examples

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,9 @@ jobs:
     strategy:
       matrix:
         target: [all, adia0d, golcolls, longcolls, lowlistcolls, szakallurbichcolls,
-                testikstraubcolls, const2d, divfree2d, eurec4a1d, rshaft1d, spdtest]
+                testikstraubcolls, const2d, divfree2d, rshaft1d, spdtest,
+                eurec4a1d_null_microphysics, eurec4a1d_condensation, eurec4a1d_collision_condensation,
+                eurec4a1d_coalbure_condensation_small, eurec4a1d_coalbure_condensation_large]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
