--- a/examples/eurec4a1d/default_config/eurec4a1d_config_stationary.yaml
+++ b/examples/eurec4a1d/default_config/eurec4a1d_config_stationary.yaml
@@ -77,7 +77,6 @@ coupled_dynamics:
   thermo: None                                                    # binary filename for vertical (coord3) velocity
 
 ### Bounday Conditions Parameters ###
-
 boundary_conditions:
   type: addsupersatdomaintop
   COORD3LIM: None                                                    # SDs added to domain with coord3 >= COORD3LIM [m]
@@ -91,3 +90,7 @@ boundary_conditions:
   NUMCONC_b: None                                                    # number conc. of 2nd droplet lognormal dist [m^-3]
   GEOMEAN_b: None                                                    # geometric mean radius of 2nd lognormal dist [m]
   geosigma_b: None                                                   # geometric standard deviation of 2nd lognormal dist
+
+### Kokkos Initialization Parameters ###
+kokkos_settings:
+  num_threads : 128
